Correcting Flex-column css rules in htmlfor Module 2

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </a>
       </div>
       <!-- SEARCH -->
-      <div class="flex">
-        <div class="flex-one">
+      <div class="flex flex-one">
+        <div >
           <form>
             <input aria-label="Search" placeholder="What can we help you find?" type="search">
             <button type="submit">SEARCH</button>
